Changelog
=========


1.3.1 (unreleased)
------------------

- Implement ReferenceObjPathSource for IRelationChoice fields.
  [mathias.leimgruber]


1.3.0 (2016-11-09)
------------------

- Implement some sort options.
  [mathias.leimgruber]

- Use plone.app.redirector to follow renamed and moved content.
  Also do not fail if the content has been removed.
  [mathias.leimgruber]


1.2.3 (2016-10-18)
------------------

- Fix edge case (mainly for tests) if the value passed to the
  IList/Widget converter is not a list, but a string.
  [raphael-s]


1.2.2 (2016-10-18)
------------------

- Implement testbrowser widget.
  [raphael-s]


1.2.1 (2016-10-17)
------------------

- Respect missing_value set by the field.
  [tschanzt]

- Implement support for ITextLine only with ReferenceWidget.
  [mathias.leimgruber]


1.2.0 (2016-10-04)
------------------

- Show absolute path starting at the plone root for the selected value.
  [mathias.leimgruber]

- Remove the list style type and the obsolete spacing for the selected elements.
  [mathias.leimgruber]

- Implement support for IList of IRelationChoice explicitly.
  Check Readme for more informations
  [mathias.leimgruber]


1.1.0 (2016-09-27)
------------------

- Ignore empty value for multiple value field.
  [mathias.leimgruber]

- Support chameleon by not rendering handlebar templates. [jone]


1.0.4 (2016-09-19)
------------------

- Make it possible to remove an given internal reference (radio button).
  [mathias.leimgruber]

- Ignore empty value for single value field.
  [mathias.leimgruber]

- Fix search by pressing the "enter" button.
  [mathias.leimgruber]

- Always unbind the click event before binding a new one on the ref button.
  [mathias.leimgruber]


1.0.3 (2016-09-14)
------------------

- Same as 1.0.2 but uploaded to PyPI.
  [mbaechtold]


1.0.2 (2016-09-14)
------------------

- Reload Items when overlay is reloaded.
  [tschanzt]

- Respect Type constraints on search.
  [tschanzt]


1.0.1 (2016-09-09)