@@ -7,6 +7,7 @@ from plone.app.testing import login
 from plone.app.testing import setRoles
 from plone.app.testing import TEST_USER_ID
 from plone.app.testing import TEST_USER_NAME
+from Products.ATContentTypes.interfaces.folder import IATFolder
 from unittest2 import TestCase
 import json
 
@@ -51,3 +52,17 @@ class TestGeneratePathbar(TestCase):
         self.assertEquals(1, len(items))
         self.assertEquals("/plone/testfolder", items[0]['path'])
         self.assertEquals("Testfolder (/plone/testfolder)", items[0]['title'])
+
+    def test_additional_traversable_query_is_applied(self):
+        create(Builder('file').titled("testfile"))
+
+        self.widget.request['term'] = 'tes'
+        self.widget.request['sort_on'] = 'sortable_title'
+        self.widget.traversal_query = {
+            'object_provides': [IATFolder.__identifier__]}
+
+        result = json.loads(SearchView(
+            self.widget, self.widget.request)())['items']
+
+        self.assertEquals(1, len(result), 'Exepct only one item')
+        self.assertEquals('/plone/testfolder', result[0]['path'])
