@@ -5,6 +5,9 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
+- Implement a additional `traversal_query` parameter for the widget.
+  [mathias.leimgruber]
+
 - Implement ReferenceObjPathSource for IRelationChoice fields.
   [mathias.leimgruber]
 
